Fix for the large gap between the activity stream post bar and the user avatar

--- a/sugarcrm/styleguide/less/sugar-specific/activity.less
+++ b/sugarcrm/styleguide/less/sugar-specific/activity.less
@@ -40,7 +40,7 @@ div.sayit.activitystream-comment-box {
   width: 79% !important;
 }
 .activitystream-post.omnibar {
-  padding-left: 80px !important;
+  padding-left: 20px !important;
   width: auto !important;
 }
 .activitystream-post .avatar42 img {
